added update current user
