# routes/users.js
@@ -1,16 +1,12 @@
 const express = require('express')
-const {
-  getAllUsers,
-  getUserById,
-  getUserPaswords,
-} = require('../controllers/users')
+const { getAllUsers, getUserById, updateUser } = require('../controllers/users')
 
 const { authenticateUser } = require('../middleware/authentication')
 
 const router = express.Router()
 
 router.route('/').get(getAllUsers)
-router.route('/passwords').get(authenticateUser, getUserPaswords)
+router.route('/update').patch(authenticateUser, updateUser)
 router.route('/:id').get(getUserById)
 
 module.exports = router
